--- a/_posts/frontend/svelte/2025-03-24-Svelte1.md
+++ b/_posts/frontend/svelte/2025-03-24-Svelte1.md
@@ -1,6 +1,6 @@
 ---
-title: Introduce Svelte, Node.js and npm
-description: Let's install Node.js and npm to use Svelte. 
+title: Introduction to Node.js and How to Create a Project
+description: Let's install Node.js(npm, npx) and Learn to create a Project.
 author: DS2Man
 date: 2025-03-24 11:00:00 +0000
 categories: [Frontend, Svelte]
@@ -8,116 +8,12 @@ tags: [Frontend, Svelte, Vite, Javascript]
 math: true
 pin: true
 ---
-  
-## *Introuduce Svelte*
 
-**[Svelte](https://svelte.dev/)** is an emerging JavaScript framework that has been gaining traction and growing rapidly following the rise of React and Vue. In modern web development, building everything solely with HTML, CSS, and JavaScript is inefficient and time-consuming. That’s why developers turn to libraries and frameworks to streamline the process. Today, not only frontend development but the entire software ecosystem has become increasingly complex. Especially in the case of frontend frameworks, the abundance of options has created a significant learning curve for developers. Svelte aims to address this challenge and could be the solution to simplify frontend development.
+## *Install Node.js, npm and npx*
 
-<!--
-Svelte는 React, Vue 이후 주목 받고 성장하고 있는 새로운 유형의 자바스크립트 프레임워크이다.
-Web 개발시 Html, CSS, JavaScript로 개발하기는 매우 비효율적임. 그래서 Library나 Framework를 사용하게 된다. 현재는 Frontend뿐만 아니라 모든 분야가 고도화되어 있는데, 특히 Framework인 경우 매우 다양한 프레임워크가 혼재하고 있어 학습 부담이 매우 크다. Svelte가 해결책이 될수 있다.
--->
+#### *Node.js*
 
-![Frontend Framework](/assets/img/svelte/2025-03-24-SVELTE1_1.png)
-_Frontend Framework(Source: [Stateofjs](https://2024.stateofjs.com/en-US/libraries/front-end-frameworks/))_
-
-#### *React vs Vue.js vs Svelte*
-
-| Framework                         | Features                                                                                                                                                                                   |
-| --------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| **[React](https://react.dev/)**   | The most widely adopted framework, known for its power and flexibility.<br>Supports a vast ecosystem of libraries and tools. <br>However, it comes with a relatively steep learning curve. |
-| **[Vue.js](https://vuejs.org/)**  | Easy to learn and beginner-friendly. <br>Offers component-based development, making it easier to organize and manage code strategically.                                                   |
-| **[Svelte](https://svelte.dev/)** | A fast and lightweight framework. <br>Compiles to highly optimized JavaScript at build time, <br>making it ideal for efficient development with minimal code.                              |
-
-Each framework has its own strengths. If you want flexibility and community support, React is a solid choice. If you prefer simplicity and ease of use, Vue.js is worth considering. And if you're looking for high performance with minimal complexity, Svelte might be the perfect fit.
-
-The following code compares how to implement a button that increases the `count` value when clicked in **React**, **Vue.js**, and **Svelte**. As you can see, **Svelte** is noticeably more concise and simple compared to the others.
-
-```html
-<!-- React -->
-import React, { useState } from 'react'
-
-export const CounterButton = () => {
-  const [count, setCount] = useState(0)
-
-  const handleClick = () => {
-    setCount(count + 1)
-  }
-
-  return (
-    <button onClick={handleClick}>
-      Number of clicks: {count}
-    </button>
-  )
-}
-
-<!-- Vue3 -->
-<script setup>
-import { ref } from 'vue'
-
-const count = ref(0)
-
-const incrementCount = () => {
-  count.value++
-}
-</script>
-
-<template>
-  <button @click="incrementCount">
-    Number of clicks: { { count }}
-  </button>
-</template>
-
-<!-- svelte -->
-<script>
-let count = 0
-
-const incrementCount = () => {
-  count++
-}
-</script>
-
-<button on:click={incrementCount}>
-  Number of clicks: {count}
-</button>
-
-```
-
-|Advantages of Svelte|Description|
-|---|---|
-|**Writing Style**|Easy to write based on the existing HTML, CSS, and JavaScript structure (similar to Vue)|
-|**Code Size**|Allows writing smaller and cleaner code compared to other frameworks|
-|**Reactivity**|Provides fast reactivity without using a virtual DOM|
-|**Bundle Size**|Generates a smaller bundle size during build, <br>which helps overcome the drawbacks of SPA (Single Page Application)|
-
-![Bundling](/assets/img/svelte/2025-03-24-SVELTE1_2.png)
-_Bundling(Source: [csslink](https://www.youtube.com/watch?v=hWbwu5dM7k8))_
-
-**Bundling** is the process of combining and optimizing files and modules used during development into a single file that can be executed by the browser. The size of the bundle can directly impact the page load time.
-
-<!--
-번들링이란 개발시의 파일과 모듈을 하나로 묶어 최적화하여 브라우저에서 실행 가능한 형태로 구성하는 과정이다. 번들 사이즈에 따라서 페이지 구동 시간이 차이가 발생한다.
--->
-
-![Process update the DOM](/assets/img/svelte/2025-03-24-SVELTE1_3.png)
-_Process update the DOM(Source: [csslink](https://www.youtube.com/watch?v=hWbwu5dM7k8))_
-
-The **DOM (Document Object Model)** is a tree-structured object model that allows a web page to be programmatically accessed and manipulated. In simple terms, it is a structured representation of a web page that enables the browser to understand its content and allows JavaScript to modify the page or handle events.
-
-<!--
-**DOM (Document Object Model)** 이란 웹 페이지를 프로그래밍적으로 제어할 수 있도록 구조화한 트리 형태의 객체 모델입니다. 쉽게 말해서 브라우저가 웹페이지를 이해하고, 자바스크립트가 페이지 내용을 수정하거나 이벤트를 처리할 수 있도록 구조화한 데이터이다.
--->
-
-Looking more closely, the **Virtual DOM** refers to an in-memory representation of the actual DOM with the same structure and content. When an update occurs, the **Virtual DOM** checks for any changes and compares only the differences with the **Real DOM**. This approach helps minimize unnecessary rendering operations and improves performance. React and Vue both adopt the Virtual DOM technique. On the other hand, Svelte takes a different approach — it updates the Real DOM directly without using a Virtual DOM, resulting in faster and more efficient updates.
-
-<!--
-좀 더 자세히 보면   Virtual DOM 이란 메모리의 실제 돔과 동일한 내용을 가지고 있는 것을 의미함.
-Virtual DOM에서 변경된 요소가 있는지 확인 후 Real DOM과 다른 부분만 비교함. 이를 통해 불필요한 렌더링 횟수를 줄일 수 있음. React와 Vue는 Virtual DOM을 사용함. Svelte는 Virtual DOM없이 Real DOM 돔을 빠르게 업데이트하는 기술 도입했다.
--->
-
-## *Install Node.js and npm*
-
-**Node.js** is a JavaScript runtime environment. Originally, JavaScript could only be executed within a web browser. However, thanks to Node.js, it became possible to run JavaScript directly on a computer, just like other programming languages. This is what we refer to as a "runtime."
+**Node.js** is a JavaScript runtime environment. Originally, JavaScript could only be executed within a web browser. However, thanks to Node.js, it became possible to run JavaScript directly on a server(or your computer), just like other programming languages. This is what we refer to as a "runtime."
 
 <!--
 **Node.js**는 JavaScript 런타임 환경이다.
@@ -132,10 +28,596 @@ You can download the Windows Installer (.msi) from the [Node.js official website
 ![npm official website](/assets/img/svelte/2025-03-24-SVELTE1_5.png)
 _[npm official website](https://www.npmjs.com/)_
 
+#### *npm(Node Package Manager)*
+
 With **npm (Node Package Manager)**, you can install countless JavaScript packages.  
 It allows you to easily use various libraries and tools in your development process. You can browse these packages on the [npm official website](https://www.npmjs.com/).  
-You’ll also notice that the framework we’ll be using **Svelte**is available there as well.
+You’ll also notice that the framework we’ll be using **Svelte** is available there as well.
 
 <!--
 **npm(Node Package Manager)**를 통해서 수많은 JavaScript 패키지를 설치할 수 있다. 이를 사용해서 다양한 라이브러리와 도구를 사용할 수 있다. [npm](https://www.npmjs.com/). 앞으로 우리가 사용해야 할 Framework인 Svelte도 등록되어 있음을 볼수 있다.
 -->
+
+#### *npx(Node Package Execute)*
+
+In addition to `npm`, you'll also be able to use a tool called **npx**, which is bundled with npm (version 5.2.0 and higher).
+
+**npx** stands for **Node Package Execute**. Unlike `npm`, which installs packages globally or locally, `npx` is used to **run packages without having to install them** permanently. This is especially useful when you want to run a one-time command-line tool or quickly scaffold a new project.
+
+For example, to create a new SvelteKit project, you might use the following command:
+- `npx sv create my-app`
+
+This command downloads the `sv` package temporarily and runs it to scaffold a new SvelteKit application in the `my-app` directory — all without having to globally install the package.
+
+In short, `npx` makes development more convenient by reducing clutter in your global or local dependencies, and allowing you to use tools only when you need them.
+
+## *Initialize a Project(with npm)*
+
+#### *The entire proces*
+
+- `Create a directory for the project.`
+- `npm init`  
+- `Make index.html and index.js`
+- `npm install <package-name> --verbose`
+	  `npm install --verbose`
+- `node index.js`
+	  if you want to execute your script using Node.js
+- `npm run xxx(e.g. dev/test/start/build ...)`
+
+#### *Initialize npm*
+
+To start using npm in your project, you first need to create a `package.json` file. This file holds metadata about the project and its dependencies.
+
+- `npm init`    
+	if you want to quickly generate one with default settings: `npm init -y`
+
+```bash
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> npm init
+This utility will walk you through creating a package.json file.
+It only covers the most common items, and tries to guess sensible defaults.
+
+See `npm help init` for definitive documentation on these fields
+and exactly what they do.
+
+Use `npm install <pkg>` afterwards to install a package and
+save it as a dependency in the package.json file.
+
+Press ^C at any time to quit.
+package name: (01.npm-study)
+version: (1.0.0)
+description:
+entry point: (index.js)
+test command:
+git repository:
+license: (ISC)
+About to write to D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study\package.json:
+
+{
+  "name": "01.npm-study",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
+}
+
+
+Is this OK? (yes) yes
+
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study>
+```
+
+After running `npm init`, you’ll have a structure like:
+
+```bash
+my-project/
+└── package.json
+```
+
+```bash
+# package.json
+
+{
+  "name": "01.npm-study",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
+}
+```
+
+#### *Make index.html and index.js*
+
+```html
+<!-- index.html -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Hello Serve</title>
+</head>
+<body>
+  <h1>Hello from Static HTML!</h1>
+  <script src="index.js"></script>
+</body>
+</html>
+```
+
+
+```javascript
+// index.js
+
+function factorial(n) {
+    if (n === 0 || n === 1) return 1;
+    return n * factorial(n - 1);
+}
+
+const arrow_factorial = (n) => {
+    if (n === 0 || n === 1) return 1;
+    return n * factorial(n - 1);
+};
+
+const result = factorial(5);
+const arrow_result = arrow_factorial(5);
+console.log("[Function] 5! is", result);
+console.log("[Arrow Function] 5! is", arrow_result);
+```
+
+#### *Install Packages*
+
+If you install packages, a `node_modules` folder and `package-lock.json` will also appear.
+Let's install a package using the following command:
+
+- `npm install <package-name> --verbose`    
+	-  To see detailed logs during install: --verbose
+
+```bash
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> npm install serve
+
+up to date, audited 89 packages in 1s
+
+24 packages are looking for funding
+  run `npm fund` for details
+
+found 0 vulnerabilities
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> 
+
+```
+
+After running `npm install <package-name>`, you’ll have a structure like:
+
+```
+my-project/
+├── node_modules/      # Adding
+├── package.json
+└── package-lock.json  # Adding
+```
+
+```bash
+# package.json
+
+{
+  "name": "01.npm-study",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1" # command: `npm run test`
+  },
+  "author": "",
+  "license": "ISC",
+  "description": "",      # Adding
+  "dependencies": {
+    "serve": "^14.2.4"    # Adding
+  }
+}
+```
+
+```bash
+# package-lock.json
+
+{
+  "name": "01.npm-study",
+  "version": "1.0.0",
+  "lockfileVersion": 3,
+  "requires": true,
+  "packages": {
+    "": {
+      "name": "01.npm-study",
+      "version": "1.0.0",
+      "license": "ISC",
+      "dependencies": {
+        "serve": "^14.2.4"
+      }
+    },
+    "node_modules/@zeit/schemas": {
+      "version": "2.36.0",
+      "resolved": "https://registry.npmjs.org/@zeit/schemas/-/schemas-2.36.0.tgz",
+      "integrity": "sha512-7kjMwcChYEzMKjeex9ZFXkt1AyNov9R5HZtjBKVsmVpw7pa7ZtlCGvCBC2vnnXctaYN+aRI61HjIqeetZW5ROg==",
+      "license": "MIT"
+    },
+    "node_modules/accepts": {
+      "version": "1.3.8",
+      "resolved": "https://registry.npmjs.org/accepts/-/accepts-1.3.8.tgz",
+      "integrity": "sha512-PYAthTa2m2VKxuvSD3DPC/Gy+U+sOA1LAuT8mkmRuvw+NACSaeXEQ+NHcVF7rONl6qcaxV3Uuemwawk+7+SJLw==",
+      "license": "MIT",
+      "dependencies": {
+        "mime-types": "~2.1.34",
+        "negotiator": "0.6.3"
+      },
+      "engines": {
+        "node": ">= 0.6"
+      }
+    },
+	
+	.....
+	
+    "node_modules/wrap-ansi": {
+      "version": "8.1.0",
+      "resolved": "https://registry.npmjs.org/wrap-ansi/-/wrap-ansi-8.1.0.tgz",
+      "integrity": "sha512-si7QWI6zUMq56bESFvagtmzMdGOtoxfR+Sez11Mobfc7tm+VkUckk9bW2UeffTGVUbOksxmSw0AA2gs8g71NCQ==",
+      "license": "MIT",
+      "dependencies": {
+        "ansi-styles": "^6.1.0",
+        "string-width": "^5.0.1",
+        "strip-ansi": "^7.0.1"
+      },
+      "engines": {
+        "node": ">=12"
+      },
+      "funding": {
+        "url": "https://github.com/chalk/wrap-ansi?sponsor=1"
+      }
+    }
+  }
+}
+
+```
+
+If you clone someone else's project that includes a `package.json`, you can install all required packages with:
+
+- `npm install --verbose`
+
+#### *Execute the Node.js file*
+
+if you want to execute your script using Node.js: 
+- `node index.js`
+
+```bash
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> node index.js
+[Function] 5! is 120
+[Arrow Function] 5! is 120
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> 
+```
+
+#### *Running Scripts*
+
+You can define and run custom scripts in `package.json`:
+
+- `npm run xxx(e.g. dev/test/start/build ...)`
+
+```bash
+# package.json
+
+"scripts": {
+  "test": "echo \"Error: no test specified\" && exit 1", # command: `npm run test`
+  "dev": "dir", # Add it manually, When you run `npm run dev`, the `dir` command will be executed.
+  "start": "serve ."
+}
+```
+
+```bash
+S D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> npm run test 
+> 01.npm-study@1.0.0 test
+> echo "Error: no test specified" && exit 1
+"Error: no test specified" 
+
+
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> npm run dev 
+> 01.npm-study@1.0.0 dev
+> dir
+ D 드라이브의 볼륨: AIResearcher
+ 볼륨 일련 번호: D22F-F334
+ D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study 디렉터리
+2025-04-04  오후 04:59    <DIR>          .
+2025-04-04  오후 04:59    <DIR>          ..
+2025-04-04  오후 04:59    <DIR>          node_modules
+2025-04-04  오후 04:59               554 package-lock.json    
+2025-04-04  오후 05:12               276 package.json
+               2개 파일                 830 바이트
+               3개 디렉터리  366,700,564,480 바이트 남음
+
+
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> npm run start    
+
+> 01.npm-study@1.0.0 start
+> serve .
+   ┌─────────────────────────────────────────────┐
+   │                                             │
+   │   Serving!                                  │
+   │                                             │
+   │   - Local:    http://localhost:3000         │
+   │   - Network:  http://180.227.217.220:3000   │
+   │                                             │
+   │   Copied local address to clipboard!        │
+   │                                             │
+   └─────────────────────────────────────────────┘
+```
+
+![Run Project](/assets/img/svelte/2025-03-24-SVELTE1_6.png)
+_Run Project_
+
+#### *Uninstall Packages*
+
+To uninstall a package:
+- `npm uninstall <package-name>`
+
+```bash
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> npm uninstall serve
+removed 1 package, and audited 1 package in 521ms
+found 0 vulnerabilities
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study>
+```
+
+By looking at the `dependencies` section in `package.json`, you can confirm that the uninstalled `lodash` has been removed.
+
+```bash
+{
+  "name": "01.npm-study",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "dir",
+    "start": "serve ."
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
+}
+```
+
+
+## *Initialize a Project(with npx)*
+
+We’ll use the **Svelte framework** to create the project using `npx`.  
+The detailed explanation will be covered later, so for now, just focus on how to create the project.
+
+If you're exploring multiple frameworks or just want to understand how Vite works, then `npm create vite@latest` is a flexible choice(Not recommended for me.).
+
+- Comparison: `npx sv create` vs `npm create vite@latest`
+
+|Feature|`npx sv create <project-name>`|`npm create vite@latest <project-name>`|
+|---|---|---|
+|Purpose|Specifically for **SvelteKit** projects|Generic **Vite** project generator|
+|Framework|SvelteKit only|Supports multiple frameworks (React, Vue, Svelte, etc.)|
+|Template Options|Minimal, demo, library (SvelteKit-specific)|Choose framework and variants|
+|Official Tool|From the Svelte team (`sv`)|From the Vite team (`create-vite`)|
+|Project Structure|Optimized for SvelteKit|Depends on chosen framework|
+
+#### *Create Project*
+
+- `npx sv create <project-name>`
+
+```bash
+PS D:\02.MyCode\GP-MyReference\21.MySvelte> npx sv create 02.npx-study
+Need to install the following packages:
+sv@0.8.0
+Ok to proceed? (y) y
+
+┌  Welcome to the Svelte CLI! (v0.8.0)
+│
+◇  Which template would you like?
+│  SvelteKit minimal
+│
+◇  Add type checking with TypeScript?
+│  Yes, using TypeScript syntax
+│
+◆  Project created
+│
+◇  What would you like to add to your project? (use arrow keys / space bar)
+│  prettier, eslint
+│
+◆  Successfully setup add-ons
+│
+◇  Which package manager do you want to install dependencies with?
+│  npm
+│
+◆  Successfully installed dependencies
+│
+◇  Successfully formatted modified files
+│
+◇  Project next steps ─────────────────────────────────────────────────────╮
+│                                                                          │
+│  1: cd 02.npx-study                                                      │
+│  2: git init && git add -A && git commit -m "Initial commit" (optional)  │
+│  3: npm run dev -- --open                                                │
+│                                                                          │
+│  To close the dev server, hit Ctrl-C                                     │
+│                                                                          │
+│  Stuck? Visit us at https://svelte.dev/chat                              │
+│                                                                          │
+├──────────────────────────────────────────────────────────────────────────╯
+│
+└  You're all set!
+
+PS D:\02.MyCode\GP-MyReference\21.MySvelte>
+```
+
+
+After running, you’ll have a structure like:
+
+```bash
+my-project/
+├── .svelte-kit/           # Internal build output generated by SvelteKit (auto-generated)
+├── node_modules/          # Installed npm packages
+├── src/
+│   ├── lib/               # Shared components, utilities, and modules
+│   ├── routes/
+│   │   └── +page.svelte   # The root route ("/") page component
+│   ├── app.d.ts           # Type declarations (used in TypeScript projects)
+│   └── app.html           # HTML template used to render the app
+├── static/
+│   └── favicon.png        # Static files (served directly as-is)
+├── .gitignore             # Files/folders to be ignored by Git
+├── .npmrc                 # npm-specific configuration
+├── .prettierrc            # Prettier configuration for code formatting
+├── .prettierignore        # Files to ignore for Prettier formatting
+├── eslint.config.js       # ESLint configuration file
+├── package.json           # Project metadata, dependencies, and scripts
+├── package-lock.json      # Exact version lock for installed packages
+├── README.md              # Project documentation
+├── svelte.config.js       # Configuration for SvelteKit
+├── tsconfig.json          # TypeScript compiler options
+└── vite.config.ts         # Vite configuration (in TypeScript)
+```
+
+```bash
+# package.json
+
+{
+	"name": "02.npx-study",
+	"private": true,
+	"version": "0.0.1",
+	"type": "module",
+	"scripts": {
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"prepare": "svelte-kit sync || echo ''",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"format": "prettier --write .",
+		"lint": "prettier --check . && eslint ."
+	},
+	"devDependencies": {
+		"@eslint/compat": "^1.2.5",
+		"@eslint/js": "^9.18.0",
+		"@sveltejs/adapter-auto": "^4.0.0",
+		"@sveltejs/kit": "^2.16.0",
+		"@sveltejs/vite-plugin-svelte": "^5.0.0",
+		"eslint": "^9.18.0",
+		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-svelte": "^3.0.0",
+		"globals": "^16.0.0",
+		"prettier": "^3.4.2",
+		"prettier-plugin-svelte": "^3.3.3",
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.0",
+		"typescript": "^5.0.0",
+		"typescript-eslint": "^8.20.0",
+		"vite": "^6.2.5"
+	}
+}
+```
+
+#### *Running Project*
+
+- `npm run dev`
+
+Before running the project, I added some content to `+page.svelte` in the console for verification.
+
+```svelte
+<!-- +page.svelte -->
+
+<script>
+    // Adding
+    console.log("Hi, Svelte")
+</script>
+
+<h1>Welcome to SvelteKit</h1>
+<p>Visit <a href="https://svelte.dev/docs/kit">svelte.dev/docs/kit</a> to read the documentation</p>
+
+```
+
+```bash
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\02.npx-study> npm run dev
+
+> 02.npx-study@0.0.1 dev
+> vite dev
+
+
+  VITE v6.2.6  ready in 790 ms
+
+  ➜  Local:   http://localhost:5173/
+  ➜  Network: use --host to expose
+  ➜  press h + enter to show help
+```
+
+![Run Project](/assets/img/svelte/2025-03-24-SVELTE1_7.png)
+_Run Project_
+
+#### *Build Project*
+
+- `npm run build`
+
+An `output` directory is created inside `.svelte-kit`, and the build results are generated in the `client` and `server` directories respectively.
+
+```bash
+.svelte-kit/
+└── output/
+    ├── client/
+    │   ├── _app/
+    │   ├── .vite/
+    │   └── favicon.png
+    └── server/
+        ├── .vite/
+        ├── chunks/
+        ├── entries/
+        ├── nodes/
+        ├── stylesheets/
+        ├── index.js
+        ├── internal.js
+        ├── manifest-full.js
+        └── manifest.js
+```
+
+```bash
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\02.npx-study> npm run build
+
+> 02.npx-study@0.0.1 build
+> vite build
+
+vite v6.2.6 building SSR bundle for production...
+✓ 157 modules transformed.
+vite v6.2.6 building for production...
+✓ 134 modules transformed.
+.svelte-kit/output/client/_app/version.json                        0.03 kB │ gzip:  0.05 kB
+.svelte-kit/output/client/.vite/manifest.json                      2.70 kB │ gzip:  0.54 kB
+.svelte-kit/output/client/_app/immutable/chunks/CjIeCOjy.js        0.03 kB │ gzip:  0.05 kB
+.svelte-kit/output/client/_app/immutable/entry/start.C98OqKc3.js   0.08 kB │ gzip:  0.09 kB
+.svelte-kit/output/client/_app/immutable/chunks/BkSfKe5A.js        0.32 kB │ gzip:  0.25 kB
+.svelte-kit/output/client/_app/immutable/nodes/0.C5QJx2NF.js       0.33 kB │ gzip:  0.24 kB
+.svelte-kit/output/client/_app/immutable/nodes/2.BFhy9sH0.js       0.35 kB │ gzip:  0.26 kB
+.svelte-kit/output/client/_app/immutable/chunks/BgYBtL1E.js        0.99 kB │ gzip:  0.56 kB
+.svelte-kit/output/client/_app/immutable/nodes/1.BVliNrGd.js       1.05 kB │ gzip:  0.61 kB
+.svelte-kit/output/client/_app/immutable/chunks/D7GdVdQS.js        2.47 kB │ gzip:  1.36 kB
+.svelte-kit/output/client/_app/immutable/entry/app._FB_ahtP.js     7.54 kB │ gzip:  3.60 kB
+.svelte-kit/output/client/_app/immutable/chunks/CuL4E_CM.js       14.80 kB │ gzip:  5.96 kB
+.svelte-kit/output/client/_app/immutable/chunks/QJMC6O67.js       32.32 kB │ gzip: 12.59 kB
+✓ built in 320ms
+.svelte-kit/output/server/.vite/manifest.json                   1.63 kB
+.svelte-kit/output/server/entries/fallbacks/layout.svelte.js    0.17 kB
+.svelte-kit/output/server/entries/pages/_page.svelte.js         0.26 kB
+.svelte-kit/output/server/internal.js                           0.31 kB
+.svelte-kit/output/server/entries/fallbacks/error.svelte.js     1.87 kB
+.svelte-kit/output/server/chunks/index.js                       3.86 kB
+.svelte-kit/output/server/chunks/exports.js                     6.88 kB
+.svelte-kit/output/server/chunks/internal.js                   50.09 kB
+.svelte-kit/output/server/index.js                            106.31 kB
+✓ built in 1.82s
+
+Run npm run preview to preview your production build locally.
+
+> Using @sveltejs/adapter-auto
+  Could not detect a supported production environment. See https://svelte.dev/docs/kit/adapters to learn how to configure your app to run on the platform of your choosing
+  ✔ done
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\02.npx-study>
+```
