--- a/_posts/frontend/svelte/2025-03-25-Svelte2.md
+++ b/_posts/frontend/svelte/2025-03-25-Svelte2.md
@@ -1,218 +1,148 @@
 ---
-title: How to use npm
-description: Let's use npm. 
+title: Introduction to Svelte and SvelteKit
+description: Let's Learn Svelte and SvelteKit.
 author: DS2Man
 date: 2025-03-25 11:00:00 +0000
 categories: [Frontend, Svelte]
-tags: [Frontend, Svelte, Vite, Javascript]
+tags: [Frontend, Svelte, SvelteKit, Vite]
 math: true
 pin: true
 ---
-  
-## *Initialize a Project*
 
-To start using npm in your project, you first need to create a `package.json` file. This file holds metadata about the project and its dependencies.
+## *Svelte vs SvelteKit - What's the Difference?*
 
-- `npm init`    
-	if you want to quickly generate one with default settings: `npm init -y`
+If you're learning Svelte, chances are you've also come across **SvelteKit**.  
+While the names are similar, they serve **very different purposes**.
 
-```bash
-PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> npm init
-This utility will walk you through creating a package.json file.
-It only covers the most common items, and tries to guess sensible defaults.
-
-See `npm help init` for definitive documentation on these fields
-and exactly what they do.
-
-Use `npm install <pkg>` afterwards to install a package and
-save it as a dependency in the package.json file.
-
-Press ^C at any time to quit.
-package name: (01.npm-study)
-version: (1.0.0)
-description:
-entry point: (index.js)
-test command:
-git repository:
-license: (ISC)
-About to write to D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study\package.json:
-
-{
-  "name": "01.npm-study",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": ""
-}
+In this post, we’ll explore the **differences between Svelte and SvelteKit**, when to use each, and why they matter in modern web development.
 
 
-Is this OK? (yes) yes
+#### *Svelte vs SvelteKit*
 
-PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study>
-```
+The [Svelte documentation](https://svelte.dev/docs/kit/introduction) explains it well. I'll quote it directly.
 
-After running `npm init`, you’ll have a structure like:
+**Svelte renders UI components. You can compose these components and render an entire page with just Svelte, but you need more than just Svelte to write an entire app.**
 
-```bash
-my-project/
-└── package.json
-```
+**SvelteKit helps you build web apps while following modern best practices and providing solutions to common development challenges.** It offers everything from basic functionalities — like a router that updates your UI when a link is clicked — to more advanced capabilities. Its extensive list of features includes build optimizations to load only the minimal required code; offline support; preloading pages before user navigation; configurable rendering to handle different parts of your app on the server via SSR, in the browser through client-side rendering, or at build-time with prerendering; image optimization; and much more. Building an app with all the modern best practices is fiendishly complicated, but SvelteKit does all the boring stuff for you so that you can get on with the creative part.
 
-```bash
-# package.json
+It reflects changes to your code in the browser instantly to provide a lightning-fast and feature-rich development experience by leveraging Vite with a Svelte plugin to do Hot Module Replacement (HMR).
 
-{
-  "name": "01.npm-study",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": ""
-}
-```
+To summarize:
 
-## *Install Packages*
+**Svelte** is **a open-source frontend framework** that helps you build UI components easily. It's suitable for small, simple projects or single-page applications.
 
-If you install packages, a `node_modules` folder and `package-lock.json` will also appear.
-Let's install a package using the following command:
+**SvelteKit** is **the official application framework**** built on top of Svelte. It provides everything needed to build full-fledged applications, including routing, SSR(Server-Side Rendering), SSG(Static Site Generation), data fetching, and build optimization.
 
-- `npm install <package-name> --verbose`    
-	-  To see detailed logs during install: --verbose
 
-```bash
-PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> npm install lodash
-added 1 package, and audited 2 packages in 1s
-found 0 vulnerabilities
-PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study>
-```
+## *Introuduce Svelte*
 
-After running `npm install <package-name>`, you’ll have a structure like:
+**[Svelte](https://svelte.dev/docs/svelte/overview)** is an emerging frontend framework that has been gaining traction and growing rapidly following the rise of React and Vue. In modern web development, building everything solely with HTML, CSS, and JavaScript is inefficient and time-consuming. That’s why developers turn to libraries and frameworks to streamline the process. Today, not only frontend development but the entire software ecosystem has become increasingly complex. Especially in the case of frontend frameworks, the abundance of options has created a significant learning curve for developers. Svelte aims to address this challenge and could be the solution to simplify frontend development.
 
-```
-my-project/
-├── node_modules/      # Adding
-├── package.json
-└── package-lock.json  # Adding
-```
+<!--
+Svelte는 React, Vue 이후 주목 받고 성장하고 있는 새로운 유형의 자바스크립트 프레임워크이다.
+Web 개발시 Html, CSS, JavaScript로 개발하기는 매우 비효율적임. 그래서 Library나 Framework를 사용하게 된다. 현재는 Frontend뿐만 아니라 모든 분야가 고도화되어 있는데, 특히 Framework인 경우 매우 다양한 프레임워크가 혼재하고 있어 학습 부담이 매우 크다. Svelte가 해결책이 될수 있다.
+-->
 
-```bash
-# package.json
+![Frontend Framework](/assets/img/svelte/2025-03-24-SVELTE1_1.png)
+_Frontend Framework(Source: [Stateofjs](https://2024.stateofjs.com/en-US/libraries/front-end-frameworks/))_
 
-{
-  "name": "01.npm-study",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1" # command: `npm run test`
-  },
-  "author": "",
-  "license": "ISC",
-  "description": "",      # Adding
-  "dependencies": {
-    "lodash": "^4.17.21"  # Adding
+#### *React vs Vue.js vs Svelte*
+
+| Framework                         | Features                                                                                                                                                                                   |
+| --------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| **[React](https://react.dev/)**   | The most widely adopted framework, known for its power and flexibility.<br>Supports a vast ecosystem of libraries and tools. <br>However, it comes with a relatively steep learning curve. |
+| **[Vue.js](https://vuejs.org/)**  | Easy to learn and beginner-friendly. <br>Offers component-based development, making it easier to organize and manage code strategically.                                                   |
+| **[Svelte](https://svelte.dev/)** | A fast and lightweight framework. <br>Compiles to highly optimized JavaScript at build time, <br>making it ideal for efficient development with minimal code.                              |
+
+Each framework has its own strengths. If you want flexibility and community support, React is a solid choice. If you prefer simplicity and ease of use, Vue.js is worth considering. And if you're looking for high performance with minimal complexity, Svelte might be the perfect fit.
+
+The following code compares how to implement a button that increases the `count` value when clicked in **React**, **Vue.js**, and **Svelte**. As you can see, **Svelte** is noticeably more concise and simple compared to the others.
+
+```html
+<!-- React -->
+import React, { useState } from 'react'
+
+export const CounterButton = () => {
+  const [count, setCount] = useState(0)
+
+  const handleClick = () => {
+    setCount(count + 1)
   }
+
+  return (
+    <button onClick={handleClick}>
+      Number of clicks: {count}
+    </button>
+  )
 }
-```
 
-```bash
-# package-lock.json
+<!-- Vue3 -->
+<script setup>
+import { ref } from 'vue'
 
-{
-  "name": "01.npm-study",
-  "version": "1.0.0",
-  "lockfileVersion": 3,
-  "requires": true,
-  "packages": {
-    "": {
-      "name": "01.npm-study",
-      "version": "1.0.0",
-      "license": "ISC",
-      "dependencies": {
-        "lodash": "^4.17.21"
-      }
-    },
-    "node_modules/lodash": {
-      "version": "4.17.21",
-      "resolved": "https://registry.npmjs.org/lodash/-/lodash-4.17.21.tgz",
-      "integrity": "sha512-v2kDEe57lecTulaDIuNTPy3Ry4gLGJ6Z1O3vE1krgXZNrsQ+LFTGHVxVjcXPs17LhbZVGedAJv8XZ1tvj5FvSg==",
-      "license": "MIT"
-    }
-  }
+const count = ref(0)
+
+const incrementCount = () => {
+  count.value++
 }
-```
+</script>
 
-If you clone someone else's project that includes a `package.json`, you can install all required packages with:
+<template>
+  <button @click="incrementCount">
+    Number of clicks: { { count }}
+  </button>
+</template>
 
-- `npm install --verbose`
+<!-- svelte -->
+<script>
+let count = 0
 
-## *Running Scripts*
-
-You can define and run custom scripts in `package.json`:
-
-```bash
-# package.json
-
-"scripts": {
-  "test": "echo \"Error: no test specified\" && exit 1" # command: `npm run test`
-  "dev": "dir" # Add it manually, When you run `npm run dev`, the `dir` command will be executed.
+const incrementCount = () => {
+  count++
 }
+</script>
+
+<button on:click={incrementCount}>
+  Number of clicks: {count}
+</button>
+
 ```
 
-```bash
-S D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> npm run test 
-> 01.npm-study@1.0.0 test
-> echo "Error: no test specified" && exit 1
-"Error: no test specified" 
+|Advantages of Svelte|Description|
+|---|---|
+|**Writing Style**|Easy to write based on the existing HTML, CSS, and JavaScript structure (similar to Vue)|
+|**Code Size**|Allows writing smaller and cleaner code compared to other frameworks|
+|**Reactivity**|Provides fast reactivity without using a virtual DOM|
+|**Bundle Size**|Generates a smaller bundle size during build, <br>which helps overcome the drawbacks of SPA (Single Page Application)|
 
+![Bundling](/assets/img/svelte/2025-03-24-SVELTE1_2.png)
+_Bundling(Source: [csslink](https://www.youtube.com/watch?v=hWbwu5dM7k8))_
 
-PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> npm run dev 
-> 01.npm-study@1.0.0 dev
-> dir
- D 드라이브의 볼륨: AIResearcher
- 볼륨 일련 번호: D22F-F334
- D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study 디렉터리
-2025-04-04  오후 04:59    <DIR>          .
-2025-04-04  오후 04:59    <DIR>          ..
-2025-04-04  오후 04:59    <DIR>          node_modules
-2025-04-04  오후 04:59               554 package-lock.json    
-2025-04-04  오후 05:12               276 package.json
-               2개 파일                 830 바이트
-               3개 디렉터리  366,700,564,480 바이트 남음
-PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study>
-```
+**Bundling** is the process of combining and optimizing files and modules used during development into a single file that can be executed by the browser. The size of the bundle can directly impact the page load time.
 
-## *Uninstall Packages*
+<!--
+번들링이란 개발시의 파일과 모듈을 하나로 묶어 최적화하여 브라우저에서 실행 가능한 형태로 구성하는 과정이다. 번들 사이즈에 따라서 페이지 구동 시간이 차이가 발생한다.
+-->
 
-To uninstall a package:
-- `npm uninstall <package-name>`
+![Process update the DOM](/assets/img/svelte/2025-03-24-SVELTE1_3.png)
+_Process update the DOM(Source: [csslink](https://www.youtube.com/watch?v=hWbwu5dM7k8))_
 
-```bash
-PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> npm uninstall lodash
-removed 1 package, and audited 1 package in 521ms
-found 0 vulnerabilities
-PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study>
-```
+The **DOM (Document Object Model)** is a tree-structured object model that allows a web page to be programmatically accessed and manipulated. In simple terms, it is a structured representation of a web page that enables the browser to understand its content and allows JavaScript to modify the page or handle events.
 
-By looking at the `dependencies` section in `package.json`, you can confirm that the uninstalled `lodash` has been removed.
+<!--
+**DOM (Document Object Model)** 이란 웹 페이지를 프로그래밍적으로 제어할 수 있도록 구조화한 트리 형태의 객체 모델입니다. 쉽게 말해서 브라우저가 웹페이지를 이해하고, 자바스크립트가 페이지 내용을 수정하거나 이벤트를 처리할 수 있도록 구조화한 데이터이다.
+-->
 
-```bash
-{
-  "name": "01.npm-study",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "dir"
-  },
-  "author": "",
-  "license": "ISC",
-  "description": ""
-}
-```
+Looking more closely, the **Virtual DOM** refers to an in-memory representation of the actual DOM with the same structure and content. When an update occurs, the **Virtual DOM** checks for any changes and compares only the differences with the **Real DOM**. This approach helps minimize unnecessary rendering operations and improves performance. React and Vue both adopt the Virtual DOM technique. On the other hand, Svelte takes a different approach — it updates the Real DOM directly without using a Virtual DOM, resulting in faster and more efficient updates.
+
+<!--
+좀 더 자세히 보면   Virtual DOM 이란 메모리의 실제 돔과 동일한 내용을 가지고 있는 것을 의미함.
+Virtual DOM에서 변경된 요소가 있는지 확인 후 Real DOM과 다른 부분만 비교함. 이를 통해 불필요한 렌더링 횟수를 줄일 수 있음. React와 Vue는 Virtual DOM을 사용함. Svelte는 Virtual DOM없이 Real DOM 돔을 빠르게 업데이트하는 기술 도입했다.
+-->
+
+## *Introuduce SvelteKit*
+
+**[SvelteKit](https://svelte.dev/docs/kit/introduction)** is a framework for rapidly developing robust, performant web applications using [Svelte](https://svelte.dev/docs/svelte/overview). If you’re coming from React, SvelteKit is similar to Next. If you’re coming from Vue, SvelteKit is similar to Nuxt.
+
+Since SvelteKit is a web application framework built on top of Svelte, if you already have a good understanding of Svelte, you can focus mainly on routing and API features.  
+I’ll cover the details as I explore them through hands-on experience.
